# CotoPeS

./: .gitignore  .ocamlformat  LICENSE  README.md  cotopes.opam  dune-project  ex.opam
.github/workflows/: build.yml  deploy.yml  format.yml
docs/: .gitignore  astro.config.mjs  package.json
docs/src/content/docs/: cps.md  index.mdx
examples/: factorial.ml  tree_builder.ml  tree_depth.ml  tree_size.ml
lib/: dune  main.ml
src/: dune  fibonacci.ml  folds.ml  map_exam2025_1.ml  stack_calc.ml  tree_builder.ml  tree_depth.ml  tree_size.ml  tree_size_presentation.ml
src/cps/: cartesian.ml  dune  factorial.ml  fibonacci.ml  folds.ml  map_exam2025_1.ml  map_exam2025_2.ml  monad_list.ml  stack_calc.ml  tree_bind.ml  tree_builder.ml  tree_depth.ml  tree_map.ml  tree_size_presentation.ml
src/defunk/: dune  fact.ml  len.ml  reverse.ml  sum.ml
src/memoi/: dune  fib.ml
test/: dune  tree_depth.ml
